--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,9 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root"><div class="full-page-loader">
+    <img width="200" src="/logo192.png" alt="AIP.Trade logo" />
+  </div></div>
 </body>
 
 </html>
