--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"><div class="full-page-loader">
-    <img width="200" src="/logo192.png" alt="AIP.Trade logo" />
+    <img width="200" src="/logo192.png" alt="logo" />
   </div></div>
 </body>
 
